# babillm

./: .gitignore  README.md  app.py  pyproject.toml
controllers/: baseline.py  main.py  test.py
examples/baselines/: baseline__openai_gpt-4o-mini__openai_text-embedding-3-large_1736678398810751.json  baseline__openai_gpt-4o-mini__openai_text-embedding-3-large__1736708748166825.json
examples/test_data/: test_data.json
examples/tests_output/: openai_gpt-4o__1736706290371051json  openai_gpt-4o__1736710111833303json  openai_gpt-4o__1736710292914362.json  openai_gpt-4o__1736710646812247.json
factories/: embeddings_factory.py  llm_factory.py
fruitstand/: Fruitstand.py  cli.py
fruitstand/controllers/: baseline.py  main.py  test.py
fruitstand/factories/: llm_factory.py
fruitstand/services/embeddings/: GeminiEmbeddings.py  OpenAIEmbeddings.py
fruitstand/services/llms/: AnthropicService.py  OpenAIService.py
services/: LLMService.py  OpenAIService.py
services/embeddings/: EmbeddingsService.py  OpenAIEmbeddings.py
services/llms/: LLMService.py  OpenAIService.py
utils/: argument_utils.py  arguments.py
