[project]
name = "babillm"
version = "0.1.0"
description = ""
authors = [
    {name = "gsareth@deckarddesigns.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "openai (>=1.59.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
